istio/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-1
spec:
  hosts:
    - "microservice-1"
  http:
    - route:
        - destination:
            host: microservice-1
            subset: v1
            port:
              number: 80
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-2
spec:
  hosts:
    - "microservice-2"
  http:
    - route:
        - destination:
            host: microservice-2 # The Target DNS name
            subset: v1
            port:
              number: 81
              # The name defined in the DestinationRule
          weight: 50
        - destination:
            host: microservice-2 # The Target DNS name
            subset: v2
            port:
              number: 81 # The name defined in the DestinationRule
          weight: 50
